--- a/Dalang-Backend/requirements.txt
+++ b/Dalang-Backend/requirements.txt
@@ -2,21 +2,36 @@ asgiref==3.8.1
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+contourpy==1.3.0
 cryptography==43.0.3
+cycler==0.12.1
 defusedxml==0.7.1
 dj-rest-auth==7.0.0
 Django==4.2.16
 django-allauth==0.61.1
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
+fonttools==4.55.0
 idna==3.10
+importlib_resources==6.4.5
+kiwisolver==1.4.7
+matplotlib==3.9.2
+numpy==2.0.2
 oauthlib==3.2.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 pycparser==2.22
 PyJWT==2.9.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
+pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+zipp==3.21.0
