--- a/Dalang_front/package.json
+++ b/Dalang_front/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
     "exceljs": "^4.4.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.460.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
