--- a/Dalang_front/package.json
+++ b/Dalang_front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
+    "axios": "^1.7.7",
     "exceljs": "^4.4.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
