--- a/Dalang_front/package.json
+++ b/Dalang_front/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@heroicons/vue": "^2.1.5",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "exceljs": "^4.4.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.460.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
     "vue-final-modal": "^3.4.11",
     "vue-router": "^4.4.5",
     "xlsx": "^0.18.5"
